# ncrunch

./: .gitignore  CMakeLists.txt  README.md
docs/: doxygen.cfg
samples/: algo.lua  flatf.txt
scripts/: verify_flatf.pl
src/: CMakeLists.txt  algo.c  crypto.c  flatf.c  hash.c  main.c  teams.c
src/include/: ncaacrunch.h
src/include/ncrunch/: crypto.h  hash.h  ncrunch.h
